Get the font awesome and javasript stuff on DisplayPackage working. Acknowledging Font Awesome in the site footer. Redesigned the follow/favorite datamodel slightly and adding an EF migration for it.

--- a/Website/Errors/Error.html
+++ b/Website/Errors/Error.html
@@ -65,9 +65,14 @@
                 </ul>
                 <div class="license">
                     <p>
-                        &copy; 2011 Outercurve Foundation.
+                        &copy; 2013 Outercurve Foundation.
                     </p>
                 </div>
+                    <div class="footer-acknowledgements">
+                        <p>
+                            Font Awesome by Dave Gandy - http://fortawesome.github.com/Font-Awesome
+                        </p>
+                    </div>
             </footer>
         </div>
         <script src="../Scripts/jquery-1.6.2.min.js"></script>
